# recurtools

./: .gitignore  CHANGELOG.md  LICENCE  README.md  __init__.py  conftest.py  docstrings.toml  mkdocs.yml  pyproject.toml  serve.sh  setup.cfg
.ado/: CI-regression.yml  build-pypi.yml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  supported_versions.yml  verify.yml
docs/: index.md  reference.md  usage.md
recurtools/: __init__.py  nested.py  utils.py
site/: index.html
tests/: test_Nonexistent.py  test_chainanything.py  test_contents.py  test_count.py  test_flatten.py  test_in.py  test_index.py  test_len.py  test_nested.py  test_sum.py
