[metadata]
name = recurtools
version = 0.1.0
author = Mike Foster
author_email = i.am.mike.foster@gmail.com
description = Tools for handling recursive sequences (of sequences of sequences of ...)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/MusicalNinjas/_git/recurtools
project_urls =
    Source = https://dev.azure.com/MusicalNinjas/_git/recurtools
    Info & Requests = https://dev.azure.com/MusicalNinjas/recurtools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Natural Language :: English
license = EUPL 1.2

[options]
package_dir = 
packages = find:
python_requires = >=3.6

[options.packages.find]
where =
include = recurtools